[DeviceService] Fix a bug that chrome.serial.getConnections never return

This CL fixes the bug:
  1. chrome.serial.connect(port) --> got connection_id1
  2. chrome.serial.disconnect(connection_id1) --> ok
  3. chrome.serial.getConnections(cb) --> cb never be triggered!

BUG=777552
TEST=browser_tests --gtest_filter=SerialApiTest.SerialFakeHardware

Change-Id: I34c941c2141ab6555e1f26b59c547763acfea22d
Reviewed-on: https://chromium-review.googlesource.com/741522
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Commit-Queue: Han Leon <leon.han@intel.com>
Cr-Commit-Position: refs/heads/master@{#512382}
Former-commit-id: 8864b268ce2c9cdb6f6d77ceea774c56b6e82a8a